<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layoutDirection="ltr"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReviewWords">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        app:elevation="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/endBtn"
                    app:strokeWidth="1.5dp"
                    app:strokeColor="#FF0000"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="4dp"
                        android:textColor="#FF0000"
                        android:fontFamily="@font/iransans"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end"/>
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:padding="2dp"
                    android:id="@+id/back_btn"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/purple"
                    app:srcCompat="@drawable/arrow_forward_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lesson_title"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iransans"
                    app:layout_constraintEnd_toStartOf="@+id/back_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/wordsNum"
                    android:textColor="@color/gray"
                    android:textSize="19sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/lesson_title"
                    app:layout_constraintTop_toBottomOf="@+id/lesson_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="19sp"
                    android:text="@string/word"
                    app:layout_constraintEnd_toStartOf="@id/wordsNum"
                    app:layout_constraintTop_toTopOf="@id/wordsNum"
                    app:layout_constraintBottom_toBottomOf="@id/wordsNum"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="69dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/teeth_white"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginEnd="80dp"
            app:layout_constraintTop_toTopOf="@id/gray_circle"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/green_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/green_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:textStyle="bold"
            android:id="@+id/studied_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/learned"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/green_circle"
            app:layout_constraintStart_toStartOf="@id/green_circle"
            app:layout_constraintTop_toBottomOf="@id/green_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/iransans"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfStudied"
            app:layout_constraintTop_toBottomOf="@id/studied_tv"
            app:layout_constraintStart_toStartOf="@id/studied_tv"
            app:layout_constraintEnd_toEndOf="@id/studied_tv"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gray_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gray_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/remaining_tv"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gray_circle"
            app:layout_constraintEnd_toEndOf="@id/gray_circle"
            app:layout_constraintTop_toBottomOf="@id/gray_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransans"
            android:text="@string/remained"
            android:textStyle="bold"
            android:textSize="13sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/iransans"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfRemaining"
            app:layout_constraintTop_toBottomOf="@id/remaining_tv"
            app:layout_constraintStart_toStartOf="@id/remaining_tv"
            app:layout_constraintEnd_toEndOf="@id/remaining_tv"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/orange_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/orange_circle"
            app:layout_constraintTop_toTopOf="@id/gray_circle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/gray"
            android:fontFamily="@font/iransans"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:id="@+id/mistakes_tv"
            app:layout_constraintTop_toBottomOf="@id/orange_circle"
            app:layout_constraintEnd_toEndOf="@id/orange_circle"
            app:layout_constraintStart_toStartOf="@id/orange_circle"
            android:layout_marginTop="8dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:layoutDirection="rtl"
            android:id="@+id/wordsViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/iransans"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfMistakes"
            app:layout_constraintTop_toBottomOf="@id/mistakes_tv"
            app:layout_constraintStart_toStartOf="@id/mistakes_tv"
            app:layout_constraintEnd_toEndOf="@id/mistakes_tv"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>